Fixed access map on mobiles & answer form

--- a/assets/css/access_map.css
+++ b/assets/css/access_map.css
@@ -2,11 +2,6 @@
 @import "~leaflet/dist/leaflet.css";
 
 #mapContainer {
-    /*clip-path: polygon(3% 0px, 7% 1%, 11% 0%, 16% 2%, 20% 0px, 23% 2%, 27.91% 1.38%, 32% 1%, 35% 1%, 39% 3%, 41% 1%, 45% 0%, 47% 2%, 50% 2%, 53% 0px, 58% 2%, 60% 2%, 63% 1%, 65% 0%, 67% 2%, 69% 2%, 73% 1%, 76% 1%, 79% 0px, 82% 1%, 85% 0px, 87% 1%, 89% 0px, 92% 1%, 96% 0px, 98% 3%, 99% 3%, 99% 6%, 100% 11%, 98% 15%, 100% 21%, 99% 28%, 100% 32%, 99% 35%, 99% 40%, 100% 43%, 99% 48%, 100% 53%, 100% 57%, 99% 60%, 100% 64%, 100% 68%, 99% 72%, 100% 75%, 100% 79%, 99% 83%, 100% 86%, 100% 90%, 99% 94%, 100.08% 99.38%, 97.43% 100.13%, 92.36% 99.63%, 89% 100%, 86.36% 100.75%, 83% 100%, 77.72% 100.63%, 72% 100%, 66.54% 99.63%, 62% 100%, 59% 99%, 54% 99%, 49% 100%, 46% 98%, 43% 100%, 40% 98%, 38% 100%, 35% 99%, 31% 100%, 28% 99%, 25% 99%, 22% 100%, 19% 99%, 16% 100%, 13% 99%, 10% 99%, 7% 100%, 4% 99%, 2% 97%, 1% 97%, 0% 94%, 1% 89%, 0% 84%, 1% 81%, 0px 76%, 0px 71%, 1% 66%, 0% 64%, 0% 61%, 0% 59%, 1% 54%, 0% 49%, 1% 45%, 0% 40%, 1% 37%, 0% 34%, 1% 29%, 0% 23%, 2% 20%, 1% 17%, 1% 13%, 0px 10%, 1% 6%, 0.64% 1%);*/
-    
-    /*mask-image: radial-gradient(ellipse farthest-side, rgba(255, 255, 255, 0.9) 75%, rgba(255, 255, 255, 0) 95%);
-    margin: -15px;*/
-
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     padding: 10px;
