--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -58,7 +58,7 @@ body > div.container {
 
 @media (max-width:575px) {
 	body > div.container {
-		margin-top: 0;
+		margin: 0;
 	}
 }
 
@@ -123,13 +123,38 @@ body.answer .guest {
 }
 
 body.answer_form form {
-	input[type=checkbox] {
+	/*input[type=checkbox] {
 		display: none;
+	}*/
+
+	.form-row {
+		margin-bottom: 10px;
+	}
+	
+	.form-control {
+		color: #4b4e51;
+		border-color: rgba(98, 96, 96, 0.26);
+	}
+
+	.form-check {
+		margin-top: 5px;
+	}
+
+	.form-control::placeholder {
+		color: #9ea7b1;
+	}
+
+	.pretty.p-switch {
+		vertical-align: sub;
+	}
+
+	.pretty.p-switch .state::before {
+		background-color: #fff;
 	}
 }
 
-@media (min-width:992px) {
-	body.answer_form .form-check-input {
-		margin-top: .8rem;
+@media (max-width:991px) {
+	.form-check {
+		padding-left: 5px;
 	}
 }
